--- a/submissions/dissertation/Makefile
+++ b/submissions/dissertation/Makefile
@@ -2,7 +2,7 @@ LATEX = pdflatex
 BIBTEX = bibtex
 
 MAIN = dissertation
-FILES = $(wildcard *.tex)
+FILES = $(wildcard sections/*.tex)
 
 OUT = $(MAIN)
 
